# django_bom_ynh

./: config_panel.toml  dev-cli.py  local_settings_source.py  manage_local_test.py  manifest.toml  pyproject.toml
conf/: gunicorn.conf.py  install_python.py  manage.py  nginx.conf  requirements.txt  settings.py  setup_python.py  setup_user.py  systemd.service  urls.py  wsgi.py
conf/django_bom/bom/test_files/: test_bom_652-00004-0A.csv  test_full_bom_no_variations_with_errors.csv  test_full_bom_no_variations_with_errors_infinite_recursion.csv  test_full_bom_with_errors.csv  test_full_bom_with_errors_infinite_recursion.csv  test_new_parts_4.csv  test_part_classes.csv
django_bom/bom/static/bom/doc/: test_full_bom.csv
django_bom/bom/test_files/: test_bom_652-00003-0A.csv  test_full_bom.csv  test_full_bom_no_variations.csv  test_part_classes_4.csv  test_part_classes_blank_rows.csv  test_part_classes_byte_order.csv  test_part_classes_no_comment.csv
scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
